--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-table": "^7.8.0",
     "sass": "^1.58.1",
     "typescript": "^4.9.5",
+    "uuid": "^10.0.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
